--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,22 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  provider: ^6.1.2
+  go_router: ^14.6.3
+  google_fonts: ^6.2.1
+  stacked: ^3.4.4
+  flutter_secure_storage: ^9.2.4
+  firebase_core: ^3.11.0
+  firebase_auth: ^5.4.2
+  url_launcher: ^6.3.1
+  google_sign_in: ^6.2.2
+  logger: ^2.5.0
+  supabase_flutter: ^2.8.3
+  flutter_dotenv: ^5.2.1
+  flutter_svg: ^2.0.17
+  image_picker: ^1.1.2
+  camera: ^0.11.1
+  permission_handler: ^11.4.0
 
 dev_dependencies:
   flutter_test:
@@ -58,9 +74,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+    - assets/.env
+    - assets/images/
+    - assets/data/
+    - assets/images/scenes/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
